--- a/KOLNY/app/src/main/res/values/strings.xml
+++ b/KOLNY/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">KOLNY</string>
+    <string name="default_web_client_id">308716260519-vf9tcb6dhnanav05kmmss8h8gpuv2q2q.apps.googleusercontent.com</string>
 </resources>
